<resources>
    <string name="app_name">Backdrop</string>
    <string name="banner_ad_unit_id">ca-app-pub-1490531158486547/2540176978</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-1490531158486547/7920496166</string>
    <string name="rewarded_video_ad_unit_id">ca-app-pub-1490531158486547/3195493535</string>
    <string name="app_id">ca-app-pub-1490531158486547~1155653551</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="toast_saved">Wallpaper saved to #</string>
    <string name="toast_saved_failed">Sorry! Failed to save wallpaper</string>
    <string name="toast_share_failed">Oops! Error occurred while sharing</string>
    <string name="toast_wallpaper_set">Wallpaper updated!</string>
    <string name="toast_wallpaper_set_failed">Sorry! Unable to set wallpaper</string>
    <string name="splash_error">Unable to download wallpapers. Verify your google\'s user name in settings or device doesn\'t have internet connection!</string>
    <string name="set_wallpaper">Set</string>
    <string name="download_wallpaper">Download</string>
    <string name="msg_unknown_error">Sorry! Unknown error occurred.</string>
    <string name="msg_wall_fetch_error">Sorry! Unable to fetch wallpaper(s). Verify app settings or device doesn\'t have internet connection.</string>
    <string name="toast_enter_google_username">Please enter google username</string>
    <string name="toast_enter_valid_grid_columns">Please enter valid number of columns</string>
    <string name="toast_enter_gallery_name">Please enter gallery directory name</string>
    <string name="lbl_google_username">Google username</string>
    <string name="lbl_no_grid_columns">Number of grid columns</string>
    <string name="lbl_gallery_name">Gallery directory name</string>
    <string name="lbl_btn_save">Save</string>
    <string name="title_activity_full_screen">FullScreenActivity</string>
    <string name="title">Wallpapers</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="download_image">download image</string>
    <string name="or">OR</string>
    <string name="quick_settings">Quick settings</string>
    <string name="daily_wallpaper_changer">Daily wallpaper changer</string>
    <string name="periodic_wallpaper_changer">Periodic wallpaper changer</string>
    <string name="saved_images">Saved Images</string>
    <string name="categories">Categories</string>
    <string name="floating_widget">Floating widget</string>
    <string name="floating_widget_text">Floating Widget</string>
    <string name="allows_you_to_change_wallpaper_in_single_click">Widget allows you to change the wallpaper instantly from your home screen. Please drag and drop the Backdrop application widget in the widget section of your phone for hassle free selection of wallpaper.</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="fab">fab</string>
    <string name="selected_album">Selected Album</string>
    <string name="save">Save</string>
    <string name="please_download_some_wallpapers">Please download some wallpapers</string>
    <string name="delete">delete</string>
    <string-array name="Album_array">
        <item>Abstract</item>
        <item>Animals</item>
        <item>Anime</item>
        <item>Architecture</item>
        <item>Auto</item>
        <item>Backgrounds</item>
        <item>Brands</item>
        <item>Fantasy</item>
        <item>Games</item>
        <item>Landscape</item>
        <item>Sports</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="no_internet_warning">Wallpapers could not be loaded due to slow or no internet</string>
    <string name="retry">Retry</string>
    <string name="set_as_home_screen_wallpaper">Set as Home screen wallpaper</string>
    <string name="set_as_lock_screen_wallpaper">set as Lock screen wallpaper</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="okay">Okay</string>
    <string name="max_limit">You have used this feature to the maximum limit. To get unlimited usage of this feature, watch a video to renew the usage count of this feature or get premium version of the app.</string>
    <string name="watch_video">watch video</string>
    <string name="get_premium">get premium</string>
    <string name="report">Report</string>
    <string name="email">cipherscriptdevelopers@gmail.com</string>
    <string name="subject">Report Copyright Issue</string>
    <string name="content">The below mentioned image is having copyright infringement, so please remove the image from the application.\n\n %1$s</string>
    <string name="category_abstract">Abstract</string>
    <string name="animals">Animals</string>
    <string name="anime">Anime</string>
    <string name="architecture">Architecture</string>
    <string name="auto">Auto</string>
    <string name="backgrounds">Backgrounds</string>
    <string name="brands">Brands</string>
    <string name="widget_settings">Widget Settings</string>
    <string name="policy">Policy</string>
    <string name="wallpaper_backdrops">Backdrop - Wallpapers</string>
    <string name="games">Games</string>
    <string name="fantasy">Fantasy</string>
    <string name="landscape">Landscape</string>
    <string name="sports">Sports</string>
    <string name="saved_backdrops">Saved Wallpapers</string>
    <string name="policy_text">All background wallpapers found here are believed to be in the "public domain". All of the images displayed are of unknown origin owner. We do not intend to infringe any legitimate intellectual right, artistic rights or copyright. Please do not ask for permissions to use images in our application to your projects, because we do not own the copyrights for them. All images displayed on the site are provided only for personal use as wallpaper on computers, mobile and other devices. If you are the rightful owner of any of the pictures posted here, and you do not want your image to be displayed on this website, then please contact us or report the respective image and we will immediately remove the picture. We do not intend to display any copyright protected images.</string>
    <string name="go_premium">Get Premium</string>
    <string name="button_rate_now">Rate now</string>
    <string name="button_may_be_later">May be later</string>
    <string name="update_heading">Backdrop just got better!</string>
    <string name="message_update_now">Please get the latest update for better and smoother experience of browsing your favourite wallpapers :)</string>
    <string name="message_rate_now">We\'re glad you\'re enjoying using our app! Would you mind giving us a review in the play store? It really helps us out! Thanks for your support :) </string>
    <string name="rate_us">Rate Us</string>
    <string name="rate_us_dialog">Rate us</string>
    <string name="do_you_like_our_app">Do you like our app!!</string>
    <string name="limit_reached">Limit reached!</string>
    <string name="settings">Settings</string>
    <string name="view_image_instruction">* Click on the image to view fullscreen</string>
    <string name="update_now">Update now</string>
</resources>
