<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/grid">
        <TextView
            android:visibility="visible"
            android:id="@+id/downloadWallpaperText"
            android:layout_width="match_parent"
            android:layout_height="100pt"
            android:text="@string/please_download_some_wallpapers"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="18sp"/>
        <ProgressBar
            android:id="@+id/pbLoader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            style="?android:attr/progressBarStyle">
        </ProgressBar>

        <GridView
            android:id="@+id/grid_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth">
        </GridView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/refreshPage"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:text="@string/please_check_your_internet_connection"
                android:gravity="top|center"
                android:textColor="#808080"
                android:textSize="18sp"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>

    </RelativeLayout>

</RelativeLayout>