<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fullLayout"
        android:orientation="vertical">
        <FrameLayout
            android:id="@+id/viewA"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="#000000"
            android:orientation="horizontal">
            <android.support.v4.view.ViewPager
                android:id="@+id/viewImagePager"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </android.support.v4.view.ViewPager>
            <android.support.v7.widget.Toolbar
                android:id="@+id/viewImageToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:theme="@style/AppTheme.AppBarOverlayReport"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="#aaaaaa"
            android:textStyle="italic"
            android:text="@string/view_image_instruction"/>

        <LinearLayout
            android:id="@+id/viewB"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llSetWallpaper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ico_apply" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/set_wallpaper"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/processing"
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="Processing"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDownloadWallpaper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/download_image"
                    android:src="@drawable/ico_download" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/download_wallpaper"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:paddingStart="10dp" />
            </LinearLayout>
        </LinearLayout>
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@mipmap/ic_sharing"
        app:layout_anchor="@id/viewA"
        app:layout_anchorGravity="bottom|right|end"
        app:backgroundTint="?android:attr/colorPrimary"
        tools:targetApi="lollipop"
        android:focusable="true" />

</android.support.design.widget.CoordinatorLayout>
